# addressbook-assistant-bot

./: .gitignore  README.md  addressbook.pkl  assistant_bot.py  notes.pkl  pyproject.toml  temp.py
src/: commands.py  decorators.py  main.py
src/models/: contacts.py  notes.py
src/services/: serialization.py
src/storage/: persistence.py
src/utils/: autocomplete.py  serializers.py  validators.py
