[project]
name = "addressbook-assistant-bot"
version = "0.1.0"
description = "CLI Assistant Bot with contacts, birthdays, emails, notes, and tags."
authors = [
  {name = "Roman"},
  {name = "Andriy"},
  {name = "Max"}
]

readme = "README.md"
requires-python = ">=3.10"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
